--- a/Fly.WebUI/Resources/Views/Home/Search.en.resx
+++ b/Fly.WebUI/Resources/Views/Home/Search.en.resx
@@ -117,7 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ArrivalCity" xml:space="preserve">
+    <value>Arrival City</value>
+  </data>
+  <data name="Back" xml:space="preserve">
+    <value>Back</value>
+  </data>
+  <data name="DepartureCity" xml:space="preserve">
+    <value>Departure city</value>
+  </data>
   <data name="Header" xml:space="preserve">
+    <value>Tikets search</value>
+  </data>
+  <data name="Search" xml:space="preserve">
     <value>Search</value>
+  </data>
+  <data name="Time" xml:space="preserve">
+    <value>Time</value>
   </data>
 </root>
