--- a/Fly.WebUI/Resources/Views/Home/Search.uk.resx
+++ b/Fly.WebUI/Resources/Views/Home/Search.uk.resx
@@ -117,7 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ArrivalCity" xml:space="preserve">
+    <value>Мiсто прибуття</value>
+  </data>
+  <data name="Back" xml:space="preserve">
+    <value>Назад</value>
+  </data>
+  <data name="DepartureCity" xml:space="preserve">
+    <value>Мiсто вiдбуття</value>
+  </data>
   <data name="Header" xml:space="preserve">
+    <value>Пошук бiлетiв</value>
+  </data>
+  <data name="Search" xml:space="preserve">
     <value>Пошук</value>
+  </data>
+  <data name="Time" xml:space="preserve">
+    <value>Час</value>
   </data>
 </root>
