--- a/Fly.WebUI/Resources/Views/Home/Search.uk.resx
+++ b/Fly.WebUI/Resources/Views/Home/Search.uk.resx
@@ -129,6 +129,9 @@
   <data name="Header" xml:space="preserve">
     <value>Пошук бiлетiв</value>
   </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Вихiд</value>
+  </data>
   <data name="Search" xml:space="preserve">
     <value>Пошук</value>
   </data>
