--- a/Fly.WebUI/Resources/Views/Shared/_Layout.uk.resx
+++ b/Fly.WebUI/Resources/Views/Shared/_Layout.uk.resx
@@ -120,6 +120,9 @@
   <data name="Login" xml:space="preserve">
     <value>Вхiд</value>
   </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Вихiд</value>
+  </data>
   <data name="SignIn" xml:space="preserve">
     <value>Реєстрація</value>
   </data>
