--- a/Fly.WebUI/Resources/Views/Aircrafts/Create.uk.resx
+++ b/Fly.WebUI/Resources/Views/Aircrafts/Create.uk.resx
@@ -117,10 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AircraftState" xml:space="preserve">
+    <value>Статус</value>
+  </data>
+  <data name="Airline" xml:space="preserve">
+    <value>Авіакомпанія</value>
+  </data>
+  <data name="Airport" xml:space="preserve">
+    <value>Аеропорт</value>
+  </data>
   <data name="Back" xml:space="preserve">
     <value>Назад</value>
   </data>
   <data name="Create" xml:space="preserve">
     <value>Створити</value>
+  </data>
+  <data name="FlightHours" xml:space="preserve">
+    <value>Загальний наліт</value>
+  </data>
+  <data name="Id" xml:space="preserve">
+    <value>Id</value>
+  </data>
+  <data name="ManufactureDate" xml:space="preserve">
+    <value>Дата виготовлення</value>
+  </data>
+  <data name="ModelType" xml:space="preserve">
+    <value>Модель</value>
+  </data>
+  <data name="Seats" xml:space="preserve">
+    <value>Місця</value>
+  </data>
+  <data name="SerialNumber" xml:space="preserve">
+    <value>Серійний номер</value>
   </data>
 </root>
