--- a/Fly.WebUI/Resources/SharedResource.resx
+++ b/Fly.WebUI/Resources/SharedResource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Admin" xml:space="preserve">
+    <value>Адмін</value>
+  </data>
   <data name="Aircraft State" xml:space="preserve">
     <value>Статус</value>
   </data>
@@ -147,6 +150,9 @@
   <data name="Create" xml:space="preserve">
     <value>Створити</value>
   </data>
+  <data name="Create seats" xml:space="preserve">
+    <value>Створити місця</value>
+  </data>
   <data name="Delete" xml:space="preserve">
     <value>Видалити</value>
   </data>
@@ -165,6 +171,15 @@
   <data name="Id" xml:space="preserve">
     <value>Id</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Вхід</value>
+  </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Вихід</value>
+  </data>
+  <data name="Manage" xml:space="preserve">
+    <value>Керувати</value>
+  </data>
   <data name="Managers" xml:space="preserve">
     <value>Менеджери</value>
   </data>
@@ -174,14 +189,26 @@
   <data name="Model Type" xml:space="preserve">
     <value>Модель</value>
   </data>
+  <data name="Name" xml:space="preserve">
+    <value>Назва</value>
+  </data>
   <data name="Next" xml:space="preserve">
     <value>Наступна сторінка</value>
   </data>
   <data name="Order By" xml:space="preserve">
     <value>Сортувати за</value>
   </data>
+  <data name="Phone" xml:space="preserve">
+    <value>Телефон</value>
+  </data>
   <data name="Prev" xml:space="preserve">
     <value>Поперення сторінка</value>
+  </data>
+  <data name="Profile" xml:space="preserve">
+    <value>Профіль</value>
+  </data>
+  <data name="Registration Address" xml:space="preserve">
+    <value>Адреса реєстрації</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>Пошук</value>
@@ -194,6 +221,9 @@
   </data>
   <data name="Serial Number" xml:space="preserve">
     <value>Серійний номер</value>
+  </data>
+  <data name="Sign In" xml:space="preserve">
+    <value>Реєстрація</value>
   </data>
   <data name="Tickets" xml:space="preserve">
     <value>Квитки</value>
