--- a/Fly.WebUI/Resources/SharedResource.resx
+++ b/Fly.WebUI/Resources/SharedResource.resx
@@ -130,7 +130,7 @@
     <value>Авіакомпанія</value>
   </data>
   <data name="Airlines" xml:space="preserve">
-    <value>Авіакомпанія</value>
+    <value>Авіакомпанії</value>
   </data>
   <data name="Airport" xml:space="preserve">
     <value>Аеропорт</value>
