--- a/Fly.WebUI/Resources/SharedResource.uk.resx
+++ b/Fly.WebUI/Resources/SharedResource.uk.resx
@@ -165,6 +165,9 @@
   <data name="Business Class" xml:space="preserve">
     <value>Бізнес класс</value>
   </data>
+  <data name="Buy" xml:space="preserve">
+    <value>Купити</value>
+  </data>
   <data name="By Decreasing" xml:space="preserve">
     <value>На зменшення</value>
   </data>
@@ -179,6 +182,9 @@
   </data>
   <data name="Class" xml:space="preserve">
     <value>Класс</value>
+  </data>
+  <data name="Country" xml:space="preserve">
+    <value>Країна</value>
   </data>
   <data name="Create" xml:space="preserve">
     <value>Створити</value>
@@ -290,6 +296,9 @@
   </data>
   <data name="Phone" xml:space="preserve">
     <value>Телефон</value>
+  </data>
+  <data name="Position" xml:space="preserve">
+    <value>Місце</value>
   </data>
   <data name="Prev" xml:space="preserve">
     <value>Поперення сторінка</value>
